--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -538,7 +538,7 @@ table {
 	object-fit: cover;
 }
 .add_locker_container{
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
